one-port.yaml
admin:
  access_log_path: "/home/envoy_proxy/logs/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_ingress
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filter_chain_match:
        destination_port: 5000
        prefix_ranges: 
        - address_prefix: "127.0.0.1"
          prefix_len: 32 
        - address_prefix: "10.0.10.24"
          prefix_len: 32 
        - address_prefix: "10.0.10.27"
          prefix_len: 32 
      filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: ingress_route
            virtual_hosts:
            - name: ingress_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: ingress_service
          http_filters:
          - name: envoy.router
    - filter_chain_match:
        destination_port: 5000
        prefix_ranges: 
        - address_prefix: "0.0.0.0"
          prefix_len: 0 
      filters:
        name: envoy.http_connection_manager
        config:
          stat_prefix: egress_http
          route_config:
            name: egress_route
            virtual_hosts:
            - name: egress_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: egress_service
          http_filters:
          - name: envoy.router
    listener_filters:
    - name: envoy.listener.original_dst
  clusters:
  - name: ingress_service
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 5000
  - name: egress_service
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    hosts:
    - socket_address:
        address: 10.0.10.129
        port_value: 5000
